--- a/resources/views/RequestForm.edge
+++ b/resources/views/RequestForm.edge
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AdonisJS - A fully featured web framework for Node.js</title>
+  <title>We are live</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -87,28 +87,28 @@
   <main>
     <div>
       <h1>Customer complaint form</h1>
-      <form  action="/customersRequest" method="POST">
-      <label for="firstname">First Name</label>
-        <input type="text" name="firstname" placeholder="Enter first name"/>
+      <form  action="/support_requests" method="POST">
+      <label for="firstName">First Name</label>
+        <input type="text" name="firstName" placeholder="Enter first name"/>
          <br>
-         <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" placeholder="Enter last name"/>
+         <label for="lastName">Last Name</label>
+        <input type="text" name="lastName" placeholder="Enter last name"/>
        <br>
-       <label for="Email">Email Address</label>
-        <input type="text" name="Email" placeholder="Enter Email Address"/>
+       <label for="email">Email Address</label>
+        <input type="text" name="email" placeholder="Enter Email Address"/>
         <br>
 
-         <label for="request title">Request Title</label>
-        <input type="text" name="Request-Title"  placeholder="Enter request title"/>
+         <label for="message_title">Request Title</label>
+        <input type="text" name="message_title"  placeholder="Enter request title"/>
        <br>
 
-        <label for="requestMsg">Enter request</label>
-        <textarea id="" name="requestMsg" rows="4" cols="50"  placeholder="Enter request message"></textarea>
+        <label for="message_text">Enter request</label>
+        <textarea id="" name="message_text" rows="4" cols="50"  placeholder="Enter request message"></textarea>
         <br>
 
 
-        <label for="image"></label>
-        <input type="file" name="image"/>
+        <label for="uploaded_file"></label>
+        <input type="file" name="uploaded_file"/>
         
           <br>
         <button type="submit">Submit request</button>
