post request fixed

--- a/resources/views/RequestForm.edge
+++ b/resources/views/RequestForm.edge
@@ -87,7 +87,7 @@
   <main>
     <div>
       <h1>Customer complaint form</h1>
-      <form  action="/support_requests" method="POST">
+      <form  action="support_requests" method="POST">
       <label for="firstName">First Name</label>
         <input type="text" name="firstName" placeholder="Enter first name"/>
          <br>
@@ -108,7 +108,7 @@
 
 
         <label for="uploaded_file"></label>
-        <input type="file" name="uploaded_file"/>
+        <input type="file" name="file_uploaded"/>
         
           <br>
         <button type="submit">Submit request</button>
